diesel_compile_tests/tests/fail/as_changeset_bad_primary_key_syntax.stderr
error: expected `,`
  --> $DIR/as_changeset_bad_primary_key_syntax.rs:12:30
   |
12 | #[diesel(primary_key(id, bar = "baz", qux(id)))]
   |                              ^
